popper in mobile settings now has correct z-index and works

--- a/src/App.mobile.css
+++ b/src/App.mobile.css
@@ -123,7 +123,7 @@
     flex-direction: column;
     justify-content: center;
     margin-top: 5px;
-    gap: 10px
+    gap: 10px;
   }
   
   .new-tag-popper-form-mobile {
@@ -274,6 +274,10 @@
     align-items: center;
     width: 100%;
     gap: 5px;
+  }
+
+  .popper-content-mobile {
+    z-index: 2000;
   }
   
   @media (max-width: 768px) {
