--- a/src/components/Mobile/BottomDrawerButton/BottomDrawerButton.css
+++ b/src/components/Mobile/BottomDrawerButton/BottomDrawerButton.css
@@ -5,7 +5,7 @@
     width: 100%;
     background-color: #fff;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1000; /* Ensure it stays above other content */
+    z-index: auto; 
   }
   
   .drawer-button {
